added small css changes and edited the database backup to automatically update the data